# chit-v2

./: .gitignore  AGENTS.md  CREDITS.md  Justfile  MODES.md  Makefile  PLAN.md  README.md  STRUCTURE.md  index.html  jsconfig.json  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
.github/: copilot-instructions.md
desktop/: README.md  electron-builder.config.js  main.js  package-lock.json  package.json
dummy/: ollama.py
public/: manifest.json
server/: README.md  pyproject.toml
server/backpack/: README.md  __main__.py  requirements.txt  scraper.py  searchtop.py  server.py
server/backpack/routes/: __init__.py  health.py  help.py  query.py
server/backpack/tools/: aircraft_registry.py  keywords.py  scraper.py  searchtop.py
server/backpack/utils/: cache.py  web.py
src/: AGENTS.md  App copy.svelte  App.svelte  ChatHeader.svelte  PageContent.svelte  app.css  app.scss  main.js
src/app/: API.svelte  EventRepeater.svelte  PageContent.svelte
src/appState/: appState.ts  appStateStorage.ts
src/chatSession/: appState.ts  appStateActions.ts  appStateStorage.ts  chatActions.ts  chatSession.ts  chatStorage.ts  chatTestLoad.ts  chatTitler.ts
src/lib/: audio.ts  memoizeBlob.ts  toast.ts  utils.ts
src/nudes/: chatSession.ts
src/preset-prompts/: _disclaimer.js  analysis.js  art_prompter.js  eli5.js  extract-and-infer.js  general.js  geolocation.js  idea-feedback.js  index.js  llm-prompt-enhance.js  llm-prompt.js  qna.js  retort.js  sdprompt.js  study-mode.js  summarize.js  (+2 more)
(+163 files in other folders)
