[project]
name = "chit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search>=8.0.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "html2text>=2025.4.15",
    "ollama>=0.4.8",
    "requests>=2.32.3",
    "rich>=14.0.0",
]
